--- a/notebooks/김건율/ensemble.ipynb
+++ b/notebooks/김건율/ensemble.ipynb
@@ -37,30 +37,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path: str = \"data/eval/top20\"\n",
-    "ease: pd.DataFrame = pd.read_csv(os.path.join(data_path,\"recbole_ease_1.csv\"))\n",
-    "recvae: pd.DataFrame = pd.read_csv(os.path.join(data_path,\"recbole_recvae_2.csv\"))\n",
-    "ract: pd.DataFrame = pd.read_csv(os.path.join(data_path,\"recbole_ract_subinfo_1.csv\"))\n",
-    "bert: pd.DataFrame = pd.read_csv(os.path.join(data_path,\"recbole_bert4rec_top20.csv\"))\n",
-    "lgcn: pd.DataFrame = pd.read_csv(os.path.join(data_path,\"recbole_lightgcn_top20.csv\"))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bert"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lgcn"
+    "data_path: str = \"data/eval/ens\"\n",
+    "ease: pd.DataFrame = pd.read_csv(os.path.join(data_path,\"submission-ease.csv\"))\n",
+    "recvae: pd.DataFrame = pd.read_csv(os.path.join(data_path,\"recvae_100_score.csv\"))\n",
+    "bert: pd.DataFrame = pd.read_csv(os.path.join(data_path,\"recbole_bert4rec_top20_score.csv\"))\n",
+    "lgcn: pd.DataFrame = pd.read_csv(os.path.join(data_path,\"recbole_lightgcn_1126_top20_score.csv\"))\n",
+    "admm: pd.DataFrame = pd.read_csv(os.path.join(data_path,\"recbole_ADMMSLIM_100_top20_score.csv\"))\n",
+    "autoint: pd.DataFrame = pd.read_csv(os.path.join(data_path,\"recbole_autoint_top20_score.csv\"))\n",
+    "bpr: pd.DataFrame = pd.read_csv(os.path.join(data_path,\"recbole_bpr_top20_score.csv\"))\n",
+    "gru: pd.DataFrame = pd.read_csv(os.path.join(data_path,\"recbole_gru4recf_top20_score.csv\"))\n"
    ]
   },
   {
@@ -72,9 +57,12 @@
     "# 각 데이터프레임에 대해 유저별 순위 매기기\n",
     "ease['rank'] = ease.groupby('user').cumcount() + 1\n",
     "recvae['rank'] = recvae.groupby('user').cumcount() + 1  \n",
-    "ract['rank'] = ract.groupby('user').cumcount() + 1\n",
     "bert['rank'] = bert.groupby('user').cumcount() + 1\n",
-    "lgcn['rank'] = lgcn.groupby('user').cumcount() + 1\n"
+    "lgcn['rank'] = lgcn.groupby('user').cumcount() + 1\n",
+    "admm['rank'] = admm.groupby('user').cumcount() + 1\n",
+    "autoint['rank'] = autoint.groupby('user').cumcount() + 1\n",
+    "bpr['rank'] = bpr.groupby('user').cumcount() + 1\n",
+    "gru['rank'] = gru.groupby('user').cumcount() + 1\n"
    ]
   },
   {
@@ -86,16 +74,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Rank Aggregation with Normalization: 100%|██████████| 31360/31360 [01:32<00:00, 337.89it/s]\n"
+      "Rank Aggregation with Normalization: 100%|██████████| 31360/31360 [01:32<00:00, 338.16it/s]\n"
      ]
     }
    ],
    "source": [
+    "### 순위 합산\n",
+    "\n",
     "import pandas as pd\n",
     "from collections import defaultdict\n",
     "from tqdm import tqdm\n",
     "\n",
-    "dataframe_list = [ease, recvae, ract, bert, lgcn]\n",
+    "dataframe_list = [ease, admm, gru, recvae, lgcn]\n",
     "user_list = dataframe_list[0]['user'].unique()\n",
     "result = []\n",
     "tbar = tqdm(user_list, desc='Rank Aggregation with Normalization')\n",
@@ -117,145 +107,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "submission.to_csv(os.path.join(data_path,\"ensemble_rank_normalization.csv\"), index=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 각 데이터프레임의 인덱스를 점수로 활용하기 위해 순위 컬럼 추가\n",
-    "ease['rank'] = ease.groupby('user').cumcount() \n",
-    "recvae['rank'] = recvae.groupby('user').cumcount()\n",
-    "ract['rank'] = ract.groupby('user').cumcount()\n",
-    "bert['rank'] = bert.groupby('user').cumcount()\n",
-    "lgcn['rank'] = lgcn.groupby('user').cumcount()\n",
+    "# ### 등장횟수 합산\n",
     "\n",
-    "# 각 모델의 추천 결과를 하나로 합치기\n",
-    "merged_df = pd.concat([\n",
-    "    ease.assign(model='ease'),\n",
-    "    recvae.assign(model='recvae'), \n",
-    "    ract.assign(model='ract'),\n",
-    "    bert.assign(model='bert'),\n",
-    "    lgcn.assign(model='lgcn')\n",
-    "])\n",
     "\n",
-    "# 각 user-item 쌍이 몇 개의 모델에서 추천되었는지 계산\n",
-    "item_counts = merged_df.groupby(['user', 'item']).size().reset_index(name='model_count')\n",
+    "# # 각 유저별로 아이템 등장 횟수를 계산\n",
+    "# result = []\n",
+    "# user_list = ease['user'].unique()\n",
+    "# tbar = tqdm(user_list, desc='Rank Aggregation with Count')\n",
     "\n",
-    "# ease 모델의 순위 정보 가져오기\n",
-    "ease_ranks = ease[['user', 'item', 'rank']].copy()\n",
-    "ease_ranks.columns = ['user', 'item', 'ease_rank']\n",
+    "# for user in tbar:\n",
+    "#     item_count = defaultdict(int)\n",
+    "    \n",
+    "#     # ease와 admm 각각에서 해당 유저의 아이템 카운트\n",
+    "#     for df in [ease, admm]:\n",
+    "#         user_items = df[df['user'] == user]['item'].values\n",
+    "#         for item in user_items[:20]:  # 상위 20개 아이템만 고려\n",
+    "#             item_count[item] += 1\n",
+    "            \n",
+    "#     # 카운트가 높은 순으로 정렬하여 상위 10개 아이템 선택\n",
+    "#     top_items = sorted(item_count.items(), key=lambda x: x[1], reverse=True)[:10]\n",
+    "    \n",
+    "#     # 결과에 추가\n",
+    "#     for item, _ in top_items:\n",
+    "#         result.append((user, item))\n",
     "\n",
-    "# item_counts와 ease_ranks 병합\n",
-    "final_scores = item_counts.merge(ease_ranks, on=['user', 'item'], how='left')\n",
-    "\n",
-    "# model_count가 높을수록, ease_rank가 낮을수록 좋은 추천으로 정렬\n",
-    "final_recommendations = (final_scores.sort_values(['user', 'model_count', 'ease_rank'], \n",
-    "                                               ascending=[True, False, True])\n",
-    "                       .groupby('user')\n",
-    "                       .head(10)\n",
-    "                       .sort_values(['user', 'model_count', 'ease_rank'])\n",
-    "                       [['user', 'item', 'model_count']]\n",
-    "                       .reset_index(drop=True))\n",
-    "\n",
-    "# 결과 확인\n",
-    "print(f\"최종 추천 결과 shape: {final_recommendations.shape}\")\n",
-    "final_recommendations\n"
+    "# submission = pd.DataFrame(result, columns=['user', 'item'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_recommendations['model_count'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_recommendations[final_recommendations['user']==14]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_recommendations = final_recommendations.loc[:,['user','item']]\n",
-    "final_recommendations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rec:pd.DataFrame = pd.read_csv(os.path.join(data_path,\"ensemble_ease_recvae_ract_top20.csv\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "데이터프레임 비교 결과:\n",
-      "공통 항목: 232399개\n",
-      "rec에만 있는 항목: 81201개\n",
-      "final_recommendations에만 있는 항목: 81201개\n",
-      "\n",
-      "사용자별 차이:\n",
-      "_merge  left_only  right_only  both\n",
-      "user                               \n",
-      "11              2           2     8\n",
-      "14              2           2     8\n",
-      "18              2           2     8\n",
-      "25              1           1     9\n",
-      "31              2           2     8\n",
-      "...           ...         ...   ...\n",
-      "138473          1           1     9\n",
-      "138475          2           2     8\n",
-      "138486          3           3     7\n",
-      "138492          3           3     7\n",
-      "138493          3           3     7\n",
-      "\n",
-      "[31360 rows x 3 columns]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user</th>\n",
+       "      <th>item</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11</td>\n",
+       "      <td>4886</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11</td>\n",
+       "      <td>4370</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11</td>\n",
+       "      <td>8961</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11</td>\n",
+       "      <td>32587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11</td>\n",
+       "      <td>40815</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>313595</th>\n",
+       "      <td>138493</td>\n",
+       "      <td>48394</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>313596</th>\n",
+       "      <td>138493</td>\n",
+       "      <td>8961</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>313597</th>\n",
+       "      <td>138493</td>\n",
+       "      <td>5349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>313598</th>\n",
+       "      <td>138493</td>\n",
+       "      <td>53125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>313599</th>\n",
+       "      <td>138493</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>313600 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          user   item\n",
+       "0           11   4886\n",
+       "1           11   4370\n",
+       "2           11   8961\n",
+       "3           11  32587\n",
+       "4           11  40815\n",
+       "...        ...    ...\n",
+       "313595  138493  48394\n",
+       "313596  138493   8961\n",
+       "313597  138493   5349\n",
+       "313598  138493  53125\n",
+       "313599  138493   2012\n",
+       "\n",
+       "[313600 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# user별로 각 DataFrame의 item이 얼마나 다른지 비교\n",
-    "comparison = pd.merge(rec, submission, on=['user', 'item'], how='outer', indicator=True)\n",
-    "\n",
-    "# '_merge' 컬럼의 값에 따라 차이 계산\n",
-    "diff_counts = comparison['_merge'].value_counts()\n",
-    "print(\"\\n데이터프레임 비교 결과:\")\n",
-    "print(f\"공통 항목: {diff_counts.get('both', 0)}개\")\n",
-    "print(f\"rec에만 있는 항목: {diff_counts.get('left_only', 0)}개\") \n",
-    "print(f\"final_recommendations에만 있는 항목: {diff_counts.get('right_only', 0)}개\")\n",
-    "\n",
-    "# user별 차이 계산\n",
-    "user_diff = comparison.groupby('user')['_merge'].value_counts().unstack(fill_value=0)\n",
-    "print(\"\\n사용자별 차이:\")\n",
-    "print(user_diff)\n"
+    "submission\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sub_path = \"data/eval/ens/submission\"\n",
+    "submission.to_csv(os.path.join(sub_path,\"ens_hard_esgrl.csv\"), index=False)"
    ]
   }
  ],
